# dance-floor

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Makefile  Pipfile  README.md  main.c  main.h  nose.cfg  setup.py  usiTwiSlave.c
floor/: Pipfile  README.md  pyproject.toml  run-show.py  setup.py  test-pattern.py  test-square.py  test.py
floor/config/: floor-layout.json  one-pod-layout.json  playlist-default.json
floor/config/layouts/: one-pod-layout.json  two-pod-layout.json
floor/config/midi_maps/: akai-apcmini.json
floor/config/playlists/: default.json  mikey.json
floor/controller/: __init__.py  controller.py  layout.py  midi.py  midi_test.py  playlist.py  test.py
floor/driver/: __init__.py  base.py  devserver.py  opc.py  raspberry.py
floor/driver/devserver/: index.html
floor/floor/controller/: __init__.py  controller.py  controller_test.py  layout.py  midi.py  midi_test.py  playlist.py  playlist_test.py  rendering.py  test.py
floor/floor/driver/: __init__.py  base.py  devserver.py  raspberry.py
floor/floor/processor/: README.md  __init__.py  animator.py  balls.py  base.py  chachacha.py  color_wash.py  constants.py  electricity.py  fire.py  fishies.py  flash_bang.py  heat_step.py  hyperspace.py  kaleidoscope.py  land_mines.py  life.py  line_slam.py  message.py  processor_test.py  pulsar.py  random_decay.py  (+14 more)
floor/opc/: Makefile
floor/opc-layouts/: README.md  simple-dance-floor.json
floor/playlists/: default.json
floor/processor/: README.md  __init__.py  animator.py  base.py  chachacha.py  color_tools.py  color_wash.py  electricity.py  fire.py  fishies.py  flash_bang.py  hyperspace.py  kaleidoscope.py  land_mines.py  life.py  message.py  processor_test.py  pulsar.py  random_decay.py  raver_plaid.py  sparkler.py  spiral.py  stripes.py  test.py  test_step.py  throbber.py  utils.py  utils_test.py  zap.py
floor/server/: README.md  server.py
floor/util/: __init__.py  color_utils.py  getch.py  led.py  opc.py  serial_read.py
spi-buffer/: CMakeLists.txt  Makefile  main.c  main.h
(+249 files in other folders)
