[tool.poetry]
name = "floor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
flask = "^2.3.2"
pymidi = "^0.5.0"
mock = "^5.0.2"
gevent = "^22.10.2"
flask-cors = "^4.0.0"
flask-sock = "^0.6.0"


[tool.poetry.group.dev.dependencies]
nose = "^1.3.7"
mock = "^5.0.2"
freezegun = "^1.2.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
